src/container/Header/Header.scss
#home {
  position: relative;
  background: url('../../assets/bgIMG.png');
  background-size: cover;
  background-position: center;
  background-repeat: repeat;

  // Disable the default padding styles
  .app__wrapper {
    padding: 0;

    .copyright {
      display: none;
    }
  }
}

.app__header {
  width: 100%;
  height: 100%;
  flex-direction: column;

  padding: 6rem 2rem 2rem;

  @media screen and (max-width: 450px) {
    padding: 6rem 1rem 2rem;
  }
}

.app__header-info {
  flex: 0.65;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  align-self: start;
  height: 100%;

  padding: 0 0 0 10%;

  @media screen and (max-width: 1200px) {
    width: 100%;
    margin-right: 0rem;
  }
}

.app__header-badge {
  display: flex;
  flex-direction: column;

  .badge-cmp,
  .tag-cmp {
    padding: 1rem 2rem;
    background: var(--white-color);
    border-radius: 15px;
    flex-direction: row;
    width: auto;

    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
  }

  .tag-cmp {
    flex-direction: column;
    margin-top: 3rem;

    p {
      width: 100%;
      text-transform: uppercase;
      text-align: right;
    }
  }

  span {
    font-size: 2.5rem;
  }

  @media screen and (max-width: 1200px) {
    justify-content: flex-start;
    align-items: flex-start;
  }
}

.app__header-bottom {
  display: flex;

  @media screen and (max-width: 1200px) {
    flex-direction: column;
    align-items: center;
  }
}

.app__title {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.app__header-title {
  position: relative;
  font-size: 3rem;
  text-align: center;
  margin: 20% 5rem 0;
  z-index: 1;

  .title-1 {
    margin-bottom: 3rem;
    background: #400ccf;
    background: linear-gradient(to right, #400ccf 0%, #cf7272 100%);
    background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  .title-2 {
    background: #0ea2cf;
    background: linear-gradient(to right, #0ea2cf 0%, #accf00 100%);
    background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  @media screen and (max-width: 1200px) {
    bottom: 2rem;
    font-size: 2.5rem;
  }

  @media screen and (max-width: 768px) {
    font-size: 2rem;
  }
}

.app__header-circles {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: flex-start;
  height: 100%;
  margin-bottom: 1rem;

  div {
    position: relative;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    margin-left: 2rem;

    background: var(--white-color);
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);

    img {
      width: 60%;
      height: 60%;
    }
  }

  // Individual circles
  div:nth-child(1) {
    width: 50px;
    height: 50px;
  }

  div:nth-child(2) {
    width: 75px;
    height: 75px;
  }

  div:nth-child(3) {
    width: 100px;
    height: 100px;
  }

  div:nth-child(4) {
    width: 75px;
    height: 75px;
  }

  div:nth-child(5) {
    width: 50px;
    height: 50px;
  }

  @media screen and (min-width: 1200px) {
    div:nth-child(1) {
      width: 100px;
      height: 100px;
      right: 5rem;
    }

    div:nth-child(2) {
      width: 125px;
      height: 125px;
      right: 3rem;
    }

    div:nth-child(3) {
      width: 140px;
      height: 140px;
    }

    div:nth-child(4) {
      width: 125px;
      height: 125px;
      right: 3rem;
    }

    div:nth-child(5) {
      width: 100px;
      height: 100px;
      right: 5rem;
    }
  }

  @media screen and (max-width: 1200px) {
    width: 100%;
    flex-direction: row;
    flex-wrap: wrap;
    margin: 2rem 0 1rem;

    div {
      margin: 1rem;
    }
  }
}

